--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,18 @@
 {
-	"name": "Humble New Tab Page",
-	"version": "1.20",
+	"name": "Wise New Tab Page",
+	"version": "1.0",
 	"minimum_chrome_version": "37",
 	"manifest_version": 2,
-	"description": "Redesigned new tab page featuring your bookmarks, apps, most visited, recently closed, and weather in a custom layout.",
+	"description": "Modern Redesigned new tab page that shows historical events that happened today in other years, quotes, popular sites and a TODO list.",
 	"icons": {
 		"128": "icon_128.png",
 		 "48": "icon_48.png",
 		 "16": "icon_16.png"
 	},
 	"permissions": [
-		"bookmarks",
-		"chrome://favicon/",
-		"topSites",
-		"management",
 		"tabs",
-		"fontSettings",
-		"sessions"
+		"sessions",
+		"http://*/"
 	],
 	"chrome_url_overrides":
 	{
@@ -26,7 +22,6 @@
 		"scripts" : ["background.js"],
 		"persistent" : true
 	},
-	"options_page": "newtab.html#options",
 	"web_accessible_resources": [
 		"newtab.html"
 	]
